# ezResponseBox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
enclosure/: ezResponseBox.scad
firmware/v1/: ezResponseBox.uf2
firmware/v1.0/: ezResponseBox.uf2
src/: main.c  usb_descriptors.c
